<resources>
    <string name="app_name">EZPark</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">default</string>
    <string name="default_info_snippet">this is default</string>
    <string name="pick_place">Pick your location</string>
    <string name="option_get_place">Set Location</string>
    <string name="sign_up_button">Not yet registered? Sign up now!</string>
    <string name="forgot_password_btn">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter password</string>
    <string name="login_title">EZPark</string>
    <string name="minimum_password">Password too short</string>
    <string name="auth_failed">Something went wrong, check email and password</string>
    <string name="register_btn">Register</string>
    <string name="login_button">Already registered? Log in here</string>
    <string name="btn_back">Click here to go back</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="we_need_your_registered_email_address">We need your registered email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="main_logo">Main logo</string>
    <string name="btn_sign_out">signout</string>
    <string name="send_password_reset_email">reset password</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="btn_send">Send</string>
    <string name="btn_change">Change</string>
    <string name="new_pass">Enter new password</string>
    <string name="hint_new_email">Enter new email</string>
    <string name="q_amp_a"><![CDATA[Q&A]]></string>
    <string name="_8226_why_i_can_t_delete_my_account_as_a_garage_owner">• Why I can\'t delete my account as a garage owner?</string>
    <string name="_8226_what_is_the_time_validity_of_the_on_street_parking_recommendation">• What is the time validity of the on street parking recommendation?</string>
    <string name="_8226_what_is_the_radius_of_my_searching">• What is the radius of my searching?</string>
    <string name="q_a">FAQs</string>
    <string name="channel_name">RecommendationChannel</string>
    <string name="channel_description">Channel to listen and post notifications</string>
</resources>
